WordPress-Cloudfoundation/templates/Wp-SecurityGroups.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: WordPress Security Groups

Metadata:

    Authors:
        Description:  Fernando Brambilla de Mello

Parameters:

    myVpc:
        Type: String
    Subnet3:
        Type: String
    Subnet4:
        Type: String
    SshCidrAllow:
        Type: String   

Resources:

    RDSSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: RDS-SG
            GroupDescription: Frontend Access
            VpcId: 
                Ref: myVpc

    WebSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: VPC-SG
            GroupDescription: Enable SSH, HTTP, HTTPS
            VpcId: 
                Ref: myVpc
            SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: '22'
                ToPort: '22'
                CidrIp:
                    Ref: SshCidrAllow
              - IpProtocol: tcp
                FromPort: '80'
                ToPort: '80'
                CidrIp: 0.0.0.0/0    
              - IpProtocol: tcp
                FromPort: '443'
                ToPort: '443'
                CidrIp: 0.0.0.0/0

    DBConnection:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            IpProtocol: tcp
            FromPort: '3306'
            ToPort: '3306'
            SourceSecurityGroupId:
              Fn::GetAtt:
              - WebSecurityGroup
              - GroupId
            GroupId:
              Fn::GetAtt:
              - RDSSecurityGroup
              - GroupId

    RDBSubnetGroup: 
        Type: AWS::RDS::DBSubnetGroup
        Properties: 
            DBSubnetGroupDescription: Create DB Subnet Group
            SubnetIds: 
              - Ref: Subnet4
              - Ref: Subnet3
            Tags:
              - Key: Name
                Value: SubGroup  

Outputs:
  WebSecurityGroup:
    Description: EC2 Security Group
    Value: !Ref WebSecurityGroup
    Export:
      Name: "WebSecurityGroup"
      
  RDSSecurityGroup:
    Description: RDS Security Group
    Value: !Ref RDSSecurityGroup
    Export:
      Name: "RDSSecurityGroup"

  RDBSubnetGroup:
    Value: !Ref RDBSubnetGroup
    Export:
      Name: "RDBSubnetGroup"
